--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Alexis Giacomotto
 description              : Alexis Giacomotto - Projects and CV 
-baseurl                  : "/spring-2025-portfolio-<Alexisgiaco>/" # Set this to "portfolio-<your-github-username>" 
+baseurl                  : "/spring-2025-portfolio-Alexisgiaco/" # Set this to "portfolio-<your-github-username>" 
 url                      : "https://cornell-mae-ug.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 
 # Theme and Style
