--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Alexis Giacomotto
 description              : Alexis Giacomotto - Projects and CV 
-baseurl                  : "" 
+baseurl                  : "/portfolio/" 
 
 # Theme and Style
 theme: jekyll-theme-minimal
